--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t martintds/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true martintds/docker-react/docker-react npm run test
+  - docker run -e CI=true martintds/docker-react npm run test
